[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/EnemigoTierraGeneral.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Slime/slime-attack-0.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Slime/slime-attack-1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Slime/slime-attack-2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Slime/slime-attack-3.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Slime/slime-attack-4.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Slime/slime-die-0.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Slime/slime-die-1.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Slime/slime-die-2.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Slime/slime-die-3.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Slime/slime-move-0.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Slime/slime-move-1.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Slime/slime-move-2.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Slime/slime-move-3.png" type="Texture" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": false,
"name": "Atacar",
"speed": 7.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": false,
"name": "Muerte",
"speed": 6.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "Movimiento",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 23, 50 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 53 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 160, 32 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 100, 24 )

[node name="EnemigoTierraGeneral" type="KinematicBody2D" groups=[
"persist",
"enemigo",
]]
position = Vector2( 0, -32 )
collision_layer = 32
script = ExtResource( 1 )

[node name="AnimacionEnemigo" type="AnimatedSprite" parent="."]
scale = Vector2( 4, 4 )
frames = SubResource( 1 )
animation = "Atacar"
frame = 4
playing = true

[node name="ColisionEnemigo" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 2, 25 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="RayCastEnemigo" type="RayCast2D" parent="."]
visible = false
position = Vector2( -44, 32 )
enabled = true
cast_to = Vector2( 0, 17 )

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
position = Vector2( 2, 25 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="CampoDeVision" type="Area2D" parent="."]
visible = false
collision_layer = 4

[node name="ColisionCampoVision" type="CollisionShape2D" parent="CampoDeVision"]
position = Vector2( 0, 16 )
z_index = -1
shape = SubResource( 4 )

[node name="CampoAtaque" type="Area2D" parent="."]
visible = false

[node name="ColisionAtaque" type="CollisionShape2D" parent="CampoAtaque"]
visible = false
position = Vector2( -1, 24 )
shape = SubResource( 5 )

[node name="TimerAtaque" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="animation_finished" from="AnimacionEnemigo" to="." method="_on_AnimacionEnemigo_animation_finished"]
[connection signal="body_entered" from="CampoDeVision" to="." method="_on_CampoDeVision_body_entered"]
[connection signal="body_entered" from="CampoAtaque" to="." method="_on_CampoAtaque_body_entered"]
